<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/cover01"
            android:id="@+id/img"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/app_name"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnEx"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textSize="14sp" android:typeface="monospace"/>
    <Button
            android:text="@string/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCredits"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:typeface="monospace"/>
    <Button
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/btnMech" android:textSize="18sp"
            android:fontFamily="@font/eater"/>
    <Button
            android:text="@string/rules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnMech" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btnEx"
            app:layout_constraintHorizontal_bias="1.0" android:textSize="18sp"
            android:fontFamily="@font/eater"/>
    <TextView
            android:text="@string/rules_content"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="0dp"
            android:id="@+id/tvContent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnStart" android:background="@color/colorPrimary"
            android:textSize="12sp" android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>