<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameOverActivity">

    <TextView
            android:text="@string/you_caught_lying"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center" android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:textStyle="bold|italic"
            android:textAllCaps="true"/>
    <TextView
            android:text="@string/final_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvScore" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/_64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvScore" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/_64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBestScore"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.489" app:layout_constraintEnd_toEndOf="@+id/textView4"/>
    <TextView
            android:text="@string/best_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/tvBestScore" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:lineSpacingExtra="30sp" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="30sp" android:textAlignment="center"/>
    <Button
            android:text="@string/retry"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:id="@+id/btnRetry" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginBottom="9dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvBestScore" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.437"
            android:textSize="24sp"/>
    <Button
            android:text="@string/home"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnHome" app:layout_constraintEnd_toStartOf="@+id/tvBestScore"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.485"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" android:textSize="24sp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/gg"
            android:id="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/adView"/>
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9395822733111301/4321644385"
            android:layout_marginTop="8dp"
            ads:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            ads:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>
</android.support.constraint.ConstraintLayout>