<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/colorPrimary">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTimer" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent" android:textAlignment="center" android:textStyle="bold"
            android:textSize="48sp" tools:text="@string/time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
    />
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:id="@+id/pBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:max="600" android:progressTint="@color/colorAccent"
            android:progress="600" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/tvTimer" android:scaleY="7"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/ano_ang_iyong_pangalan"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:id="@+id/tvQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"
            android:textColor="@color/colorAccent" android:textSize="24sp" android:textAllCaps="false"
            android:textStyle="italic"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="344dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/pBar"
            app:layout_constraintVertical_bias="0.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="215dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion">
        <Button
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnQ1"/>
        <Button
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnQ2"/>
        <Button
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnQ3"/>
        <Button
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnQ4"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9395822733111301/4321644385"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            ads:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            ads:layout_constraintEnd_toEndOf="parent" ads:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginBottom="8dp" ads:layout_constraintBottom_toBottomOf="parent">
    </com.google.android.gms.ads.AdView>
</android.support.constraint.ConstraintLayout>